improve: Increase contrast and fix aria roles to increase Accessibility score on Google Lighthouse

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -5,7 +5,7 @@
 @import url('https://fonts.googleapis.com/css?family=Press+Start+2P|Ubuntu+Condensed');
 // * NEW COLORS * //
 $dark-black: #222;
-$dark-grey: #757575;
+$dark-grey: #adadad;
 $dark-cyan: #001719;
 $light-cyan: #00B8CF;
 $super-light: #00E3FF;
